kojin-macros/tests/fail/not_async.rs
use kojin_macros::task;
use kojin_core::TaskContext;

#[task]
fn my_task(ctx: &TaskContext) {}

fn main() {}
